--- a/8/8.ipynb
+++ b/8/8.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
        "1851"
       ]
      },
-     "execution_count": 182,
+     "execution_count": 214,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,40 +46,22 @@
     "        tree = height_data[row_idx, col_idx]\n",
     "        row = height_data[row_idx, :]\n",
     "        column = height_data[:, col_idx]\n",
-    "        \n",
-    "        # View 1\n",
-    "        temp_row = row[:col_idx + 1]\n",
-    "        if temp_row.argmax() == col_idx:\n",
-    "            visible+=1\n",
-    "            continue\n",
     "\n",
-    "        # View 2\n",
-    "        temp_col_idx = len(row) - col_idx - 1\n",
-    "        temp_row = row[col_idx:][::-1]\n",
-    "        if temp_row.argmax() == temp_col_idx:\n",
-    "            visible+=1\n",
-    "            continue\n",
+    "        view_2 = (row[:col_idx] < tree).all()\n",
+    "        view_4 = (row[col_idx + 1:] < tree).all()\n",
+    "        view_1 = (column[:row_idx] < tree).all()\n",
+    "        view_3 = (column[row_idx + 1:] < tree).all()\n",
     "\n",
-    "        # View 1 col\n",
-    "        temp_col = column[:row_idx + 1]\n",
-    "        if temp_col.argmax() == row_idx:\n",
-    "            visible+=1\n",
-    "            continue\n",
+    "        if any([view_1, view_2, view_3, view_4]):\n",
+    "            visible += 1\n",
     "\n",
-    "\n",
-    "        # View 2 col\n",
-    "        temp_row_idx = len(column) - row_idx - 1\n",
-    "        temp_column = column[row_idx:][::-1]\n",
-    "        if temp_column.argmax() == temp_row_idx:\n",
-    "            visible+=1\n",
-    "            continue\n",
     "\n",
     "visible"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +70,7 @@
        "574080"
       ]
      },
-     "execution_count": 184,
+     "execution_count": 215,
      "metadata": {},
      "output_type": "execute_result"
     }
