--- a/8/8.ipynb
+++ b/8/8.ipynb
@@ -61,21 +61,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "574080"
-      ]
-     },
-     "execution_count": 215,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "79.6 ms ± 1.05 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+     ]
     }
    ],
    "source": [
+    "%%timeit\n",
+    "\n",
     "all_points = []\n",
     "\n",
     "for row_idx in range(1, height_data.shape[0] - 1):\n",
