--- a/9/9.ipynb
+++ b/9/9.ipynb
@@ -2,31 +2,185 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 196,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('data.txt') as file:\n",
-    "    data = file.read().splitlines()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "6494"
-      ]
-     },
-     "execution_count": 210,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "6494\n",
+      "2691\n",
+      "39.5 ms ± 211 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+     ]
     }
    ],
    "source": [
+    "%%timeit\n",
+    "\n",
+    "with open('data.txt') as file:\n",
+    "    data = file.read().splitlines()\n",
+    "\n",
     "h = [0,0]\n",
     "t = [0,0]\n",
     "\n",
@@ -69,26 +223,8 @@
     "    \n",
     "        total_pos.append(tuple(t))\n",
     "        \n",
-    "len(set(total_pos))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 213,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2691"
-      ]
-     },
-     "execution_count": 213,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "print(len(set(total_pos)))\n",
+    "\n",
     "h = [0,0]\n",
     "tails = [[0,0] for _ in range(9)]\n",
     "\n",
@@ -111,7 +247,7 @@
     "    \n",
     "        total_pos.append(tuple(tails[-1]))\n",
     "        \n",
-    "len(set(total_pos))"
+    "print(len(set(total_pos)))"
    ]
   }
  ],
