--- a/11/11.ipynb
+++ b/11/11.ipynb
@@ -187,9 +187,7 @@
     "        \n",
     "        monkey['inspections'] +=1\n",
     "\n",
-    "    monkey['items'] = []\n",
-    "\n",
-    "[m['inspections'] for m in monkeys]"
+    "    monkey['items'] = []"
    ]
   },
   {
