--- a/15/15.ipynb
+++ b/15/15.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
     "from tqdm import tqdm\n",
+    "import re\n",
     "\n",
     "with open('data.txt') as file:\n",
     "    data = file.read().splitlines()"
@@ -14,23 +15,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "58.6 µs ± 338 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "4919282"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "%%timeit\n",
     "non_allowed = []\n",
     "\n",
     "row = 2000000\n",
-    "\n",
+    "x\n",
     "for line in data:\n",
     "    s, b = line.split(':')\n",
     "    s_x,s_y = [int(a) for a in re.sub('[A-Za-z =]', '', s).split(',')]\n",
@@ -52,34 +55,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 55%|█████▌    | 11/20 [00:00<00:00, 9650.15it/s]"
+      "  0%|          | 35/4000000 [00:07<243:31:56,  4.56it/s]\n"
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "11\n",
-      "{14}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/Users/kristoffer/github/aoc2022/15/15.ipynb Cell 3\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/kristoffer/github/aoc2022/15/15.ipynb#X13sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m     temp \u001b[39m=\u001b[39m dist \u001b[39m-\u001b[39m dist_row_y\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/kristoffer/github/aoc2022/15/15.ipynb#X13sZmlsZQ%3D%3D?line=20'>21</a>\u001b[0m     non_allowed\u001b[39m+\u001b[39m\u001b[39m=\u001b[39m\u001b[39mlist\u001b[39m(\u001b[39mrange\u001b[39m(\u001b[39mmax\u001b[39m(s_x \u001b[39m-\u001b[39m temp, \u001b[39m0\u001b[39m), \u001b[39mmin\u001b[39m(s_x \u001b[39m+\u001b[39m temp \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m, limit)))\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/kristoffer/github/aoc2022/15/15.ipynb#X13sZmlsZQ%3D%3D?line=22'>23</a>\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(\u001b[39mset\u001b[39;49m(non_allowed)) \u001b[39m<\u001b[39m limit:\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/kristoffer/github/aoc2022/15/15.ipynb#X13sZmlsZQ%3D%3D?line=23'>24</a>\u001b[0m     \u001b[39mprint\u001b[39m(row)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/kristoffer/github/aoc2022/15/15.ipynb#X13sZmlsZQ%3D%3D?line=24'>25</a>\u001b[0m     \u001b[39mbreak\u001b[39;00m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
    "source": [
-    "limit = 20\n",
+    "limit = 4000000\n",
     "\n",
     "for row in tqdm(range(limit)):\n",
     "\n",
@@ -101,9 +100,8 @@
     "\n",
     "        non_allowed+=list(range(max(s_x - temp, 0), min(s_x + temp + 1, limit)))\n",
     "\n",
-    "    if len(na:=set(non_allowed)) < limit:\n",
+    "    if len(set(non_allowed)) < limit:\n",
     "        print(row)\n",
-    "        print(set(range(limit)) - na)\n",
     "        break"
    ]
   }
