--- a/16/16.ipynb
+++ b/16/16.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,13 +12,15 @@
     "from collections import defaultdict\n",
     "import heapq as heap\n",
     "\n",
+    "import itertools\n",
+    "\n",
     "with open('data.txt') as file:\n",
     "    data = file.read().splitlines()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +55,7 @@
        "1653"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,7 +63,8 @@
    "source": [
     "cache = {}\n",
     "\n",
-    "def get_best_path(key, open_valves, minutes_left):\n",
+    "\n",
+    "def get_best_path(key, open_valves, minutes_left, closed_valves):\n",
     "\n",
     "    cache_key = (key, tuple(set(open_valves)), minutes_left)\n",
     "    if cached := cache.get(cache_key, None):\n",
@@ -73,90 +76,29 @@
     "        return 0\n",
     "\n",
     "    if key not in open_valves:\n",
-    "        release = (minutes_left - 1) * valves[key]['rate'] + get_best_path(key, open_valves + [key], minutes_left=minutes_left-1)\n",
+    "\n",
+    "        new_open_vales = open_valves.copy()\n",
+    "        new_open_vales.add(key)\n",
+    "\n",
+    "        new_closed = closed_valves.copy()\n",
+    "        new_closed.remove(key)\n",
+    "\n",
+    "        release = (minutes_left - 1) * valves[key][\"rate\"] + get_best_path(\n",
+    "            key,\n",
+    "            new_open_vales,\n",
+    "            minutes_left=minutes_left - 1,\n",
+    "            closed_valves=new_closed,\n",
+    "        )\n",
     "        alts.append(release)\n",
     "\n",
-    "    for valve in valves[key]['next']:\n",
-    "        release = get_best_path(valve, open_valves, minutes_left=minutes_left-1)\n",
+    "    for valve in valves[key][\"next\"]:\n",
+    "        release = get_best_path(\n",
+    "            valve,\n",
+    "            open_valves,\n",
+    "            minutes_left=minutes_left - 1,\n",
+    "            closed_valves=closed_valves,\n",
+    "        )\n",
     "        alts.append(release)\n",
-    "\n",
-    "    total_score = max(alts)\n",
-    "    cache[cache_key] = total_score\n",
-    "    return total_score\n",
-    "\n",
-    "\n",
-    "zero_rates = [key for key, val in valves.items() if val['rate'] == 0]\n",
-    "\n",
-    "get_best_path('AA', zero_rates, 30)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 154,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cache = {}\n",
-    "\n",
-    "\n",
-    "def get_best_path_2(key, elephant, open_valves, minutes_left):\n",
-    "\n",
-    "    cache_key = (tuple(set([key, elephant])), tuple(set(open_valves)), minutes_left)\n",
-    "    if cached := cache.get(cache_key, None):\n",
-    "        return cached\n",
-    "\n",
-    "    alts = []\n",
-    "\n",
-    "    if minutes_left == 0 or len(valves.items()) == len(open_valves):\n",
-    "        return 0\n",
-    "\n",
-    "    if key not in open_valves:\n",
-    "\n",
-    "        open_score = (minutes_left - 1) * valves[key][\"rate\"]\n",
-    "\n",
-    "        # Elephant open also\n",
-    "        if elephant not in open_valves and elephant != key:\n",
-    "\n",
-    "            release = (\n",
-    "                open_score\n",
-    "                + (minutes_left - 1) * valves[elephant][\"rate\"]\n",
-    "                + get_best_path_2(\n",
-    "                    key, elephant, open_valves + [key, elephant], minutes_left=minutes_left - 1\n",
-    "                )\n",
-    "            )\n",
-    "\n",
-    "            alts.append(release)\n",
-    "\n",
-    "        # Open and all elephant moves\n",
-    "        for elephant_move in valves[elephant][\"next\"]:\n",
-    "            release = open_score + get_best_path_2(\n",
-    "                key, elephant_move, open_valves + [key], minutes_left=minutes_left - 1\n",
-    "            )\n",
-    "            alts.append(release)\n",
-    "\n",
-    "\n",
-    "    for new_valve in valves[key][\"next\"]:\n",
-    "\n",
-    "        # Elephant open\n",
-    "\n",
-    "        if elephant not in open_valves:\n",
-    "            release = (\n",
-    "                (minutes_left - 1) * valves[elephant][\"rate\"]\n",
-    "                + get_best_path_2(\n",
-    "                    new_valve, elephant, open_valves + [elephant], minutes_left=minutes_left - 1\n",
-    "                )\n",
-    "            )\n",
-    "\n",
-    "            alts.append(release)\n",
-    "\n",
-    "        # Open and all elephant moves\n",
-    "        for elephant_move in valves[elephant][\"next\"]:\n",
-    "            release = get_best_path_2(\n",
-    "                new_valve, elephant_move, open_valves, minutes_left=minutes_left - 1\n",
-    "            )\n",
-    "            alts.append(release)\n",
-    "\n",
-    "\n",
     "\n",
     "    total_score = max(alts)\n",
     "    cache[cache_key] = total_score\n",
@@ -164,8 +106,60 @@
     "\n",
     "\n",
     "zero_rates = [key for key, val in valves.items() if val[\"rate\"] == 0]\n",
+    "valves_left = [key for key, val in valves.items() if key not in zero_rates]\n",
     "\n",
-    "get_best_path_2(\"AA\", \"AA\", zero_rates, 26)\n"
+    "get_best_path(\"AA\", set(zero_rates), 30, set(valves_left))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "full = set(valves_left)\n",
+    "\n",
+    "combs = []\n",
+    "\n",
+    "for n in range(len(full)):\n",
+    "    my = list(itertools.combinations(full, n))\n",
+    "    elephant = [[a for a in full if a not in b] for b in my]\n",
+    "    combs += list(zip(my, elephant))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 32767/32767 [15:29<00:00, 35.26it/s]   \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2223"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scores = []\n",
+    "\n",
+    "for c in tqdm(combs):\n",
+    "    my, elephant = c\n",
+    "    my_path = get_best_path(\"AA\", set(zero_rates + list(elephant)), 26, set(my))\n",
+    "    elephant_path = get_best_path(\"AA\", set(zero_rates + list(my)), 26, set(elephant))\n",
+    "    scores.append(my_path + elephant_path)\n",
+    "\n",
+    "max(scores)"
    ]
   }
  ],
