--- a/16/16.ipynb
+++ b/16/16.ipynb
@@ -179,7 +179,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.10.2 (main, Mar 14 2022, 11:20:22) [Clang 13.0.0 (clang-1300.0.27.3)]"
   },
   "orig_nbformat": 4,
   "vscode": {
