--- a/16/16.ipynb
+++ b/16/16.ipynb
@@ -165,7 +165,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.2 64-bit ('3.10.2')",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -179,12 +179,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2 (main, Mar 14 2022, 11:20:22) [Clang 13.0.0 (clang-1300.0.27.3)]"
+   "version": "3.11.1 (main, Dec 18 2022, 21:12:09) [Clang 14.0.0 (clang-1400.0.29.202)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "0b0ef6e9b4263cd5b5701e9a8bec4b669e6d0deb6851fa2dee2e6e4c780046d2"
+    "hash": "21cb412c7ab3e231a2465a014a22826e8d2cd96df42ac20cbd8cdb7b7a3d1212"
    }
   }
  },
