--- a/21/21.ipynb
+++ b/21/21.ipynb
@@ -70,21 +70,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 275,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "3617613952378.0"
-      ]
-     },
-     "execution_count": 274,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.05 ms ± 40.5 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+     ]
     }
    ],
    "source": [
+    "%%timeit\n",
+    "\n",
     "exps = {}\n",
     "left = []\n",
     "\n",
